chore: prepare Cloudflare Pages\n\n- Add Pages-ready build script in package.json\n- Add .node-version (22.11.0)\n- Pin Ruby 3.2.x: Gemfile ruby constraint, .ruby-version (3.2.3), .tool-versions update

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "build-css": "postcss _src/styles.css -o assets/css/styles-compiled.css"
+    "build-css": "postcss _src/styles.css -o assets/css/styles-compiled.css",
+    "build": "bundle install && npm run build-css && bundle exec jekyll build"
   },
   "devDependencies": {
     "@types/bun": "latest",
