ci: Cloudflare Pages via Bun + Wrangler\n\n- Use Bun for build, remove npm usage\n- Pin wrangler 4.34.0 (devDependency)\n- Add wrangler.toml (name, pages_build_output_dir)\n- Add GitHub Actions workflow deploying with wrangler-action

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "type": "module",
   "scripts": {
     "build-css": "postcss _src/styles.css -o assets/css/styles-compiled.css",
-    "build": "bundle install && npm run build-css && bundle exec jekyll build"
+    "build": "postcss _src/styles.css -o assets/css/styles-compiled.css && bundle exec jekyll build",
+    "pages:dev": "wrangler pages dev _site"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "wrangler": "4.34.0",
     "typescript": "^5.4.2"
   },
   "dependencies": {
